<resources>
    <string name="app_name">Freud</string>
    <string name="welcomeText">Nice to meet you, I am Freud, your digital friend\nand I would be happy to assist you with anything you need</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="yuval">In memory of Yuval Seri</string>
    <string name="loginH">Login</string>
    <string name="loginT">Log in with your account</string>
    <string name="registerInLoginPage">Don\'t have an account yet? Register now</string>
    <string name="registerT">Create your account</string>
    <string name="fName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="phone1sos">Emergency Phone 1</string>
    <string name="phone2sos">Emergency Phone 2</string>
    <string name="phone3sos">Emergency Phone 3</string>
    <string name="newPsw">New Password</string>
    <string name="sosPhones">Emergency Phones</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="termsH">I have read and agree to the terms</string>
    <string name="addPhoneNum">Please enter 3 emergency phone numbers</string>
    <string name="OrLogWith">Or log in with</string>
    <string name="avatarH">Avatar</string>
    <string name="selectAvatar">Please select your avatar</string>
    <string name="next">Next</string>
    <string name="forgetPasswordH">Forgot Password</string>
    <string name="forgetPasswordT">Enter your email and we\'ll send you a reset email</string>
    <string name="avatar1">Avatar 1</string>
    <string name="loginInRegisterPage">Already have an account? Sign in now</string>
    <string name="guest">Anonymous Login</string>
    <string name="securityH">Data Security</string>
    <string name="securityT">This app is protected by the Lynx Cyber security system\nand safeguards user privacy</string>
    <string name="homeHName">Good morning</string>
    <string name="homeT">What can I assist you with today?</string>
    <string name="sosT">Would you like to send an emergency message to your contacts?</string>
    <string name="personalAreaH">Personal Area</string>
    <string name="personalAreaT">Here you can edit your account</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="conectUsH">Contact Us</string>
    <string name="conectUsT">We are here to help! Contact us with any questions or feedback, and we\'ll get back to you as soon as possible.</string>
    <string name="conectUsMT">Message</string>
    <string name="conectUsT2">How useful was our app for you?\nWe\'d love to hear your opinion!</string>
    <string name="send">Send</string>
    <string name="feedback1">Slightly\nUseful</string>
    <string name="feedback2">Moderately Useful</string>
    <string name="feedback3">Very\nUseful</string>
    <string name="feedback4">Extremely Useful</string>
    <string name="chatH">Chat</string>
    <string name="chatInput">Type a message</string>
    <string name="helplinesH">Helpline List</string>
    <string name="helplinesT">Here is a list of helplines for use if needed</string>
    <string name="search">Search</string>
    <string name="helpEranH">Immediate Support</string>
    <string name="helpEranN">ERAN</string>
    <string name="helpEranT">Emotional First Aid</string>
    <string name="helpEranP">1–800–241–201</string>
    <string name="helpEranE">eran1201@eran.org.il</string>
    <string name="helpEranW">https://www.eran.org.il/</string>
    <string name="helpSaharH">Immediate Support</string>
    <string name="helpSaharN">Sahar</string>
    <string name="helpSaharT">Support and Listening Network</string>
    <string name="helpSaharP">055–957–1399</string>
    <string name="helpSaharE">email</string>
    <string name="helpSaharW">https://www.sahar.org.il/</string>
    <string name="helpNatalH">Immediate Support</string>
    <string name="helpNatalN">NATAL</string>
    <string name="helpNatalT">Trauma Victims of National Violence</string>
    <string name="helpNatalP">1–800–363–363</string>
    <string name="helpNatalE">natal@natal.org.il</string>
    <string name="helpNatalW">https://www.natal.org.il/</string>
    <string name="helpNo2violenceH">Immediate Support</string>
    <string name="helpNo2violenceN">No to Violence</string>
    <string name="helpNo2violenceT">No to Violence Against Women</string>
    <string name="helpNo2violenceP">*6724</string>
    <string name="helpNo2violenceE">donation@no2violence.co.il</string>
    <string name="helpNo2violenceW">https://no2violence.co.il/</string>
    <string name="helpMensH">Immediate Support</string>
    <string name="helpMensN">National Helpline for Men</string>
    <string name="helpMensT">Ministry of Welfare and Social Affairs</string>
    <string name="helpMensP">1203</string>
    <string name="helpMensE">email</string>
    <string name="helpMensW">https://www.gov.il/he/departments/molsa/govil-landing-page</string>
    <string name="helpLgbtH">Immediate Support</string>
    <string name="helpLgbtN">LGBT Association</string>
    <string name="helpLgbtT">Listening Line</string>
    <string name="helpLgbtP">*2982</string>
    <string name="helpLgbtE">yesh@lgbt.org.il</string>
    <string name="helpLgbtW">https://www.lgbt.org.il/</string>
    <string name="helpHoshenH">Education and Awareness</string>
    <string name="helpHoshenN">Hoshen</string>
    <string name="helpHoshenT">Education and Change - The Educational Organization of the LGBT Community</string>
    <string name="helpHoshenP">03–603–3373</string>
    <string name="helpHoshenE">office@hoshen.org</string>
    <string name="helpHoshenW">https://www.hoshen.org/</string>
    <string name="helpIgyH">LGBT Youth Organization</string>
    <string name="helpIgyN">IGY</string>
    <string name="helpIgyT">Support Groups and Meetings for LGBT Youth in Distress</string>
    <string name="helpIgyP">054–911–9726</string>
    <string name="helpIgyE">office@igy.org.il</string>
    <string name="helpIgyW">https://www.igy.org.il/</string>
    <string name="messageWhitL">Hello, this is a message from the Freud app team. One of our users is in distress. Attached is the user\'s message quote and their location: </string>
    <string name="chatT">Chat</string>
    <string name="dialogEmergency">It seems you are in distress.\nWould you like to talk to someone?</string>
    <string name="no">No, thanks</string>
    <string name="yes">Yes, please</string>
    <string name="linksAi">©Links AI Group</string>
    <string name="version">Version 1.0.0</string>
    <string name="TPersonalAnonimus">Anonymous user - no data available for update</string>
    <string name="sosSMS1">Hi, a help request was sent to you through the Freud app\n from-</string>
    <string name="sosSMS2">Please help me, I am in urgent need\nLocation:</string>
    <string name="TSosSmsAnonimus">Anonymous user - no emergency contacts found</string>
    <string name="TSosSms">Emergency message sent to </string>
    <string name="TSosSmsX">Message sending failed</string>
    <string name="TAnonimusC">Anonymous user - for your privacy, your messages will not be saved in the chat</string>
    <string name="TStartSpeek">Im listening…</string>
    <string name="TToHelplines">No permission for a call - click on the helplines button</string>
    <string name="TnoPTCall">No permission for a call - click on the helplines button</string>
    <string name="TChooseOne">Please choose one of the options</string>
    <string name="TFillAl">Please fill in all fields</string>
    <string name="TFail">Feedback submission failed </string>
    <string name="TThanksF">Thank you for your feedback!</string>
    <string name="TEEmail">Please enter an email address</string>
    <string name="TSEmail">A password reset email has been sent</string>
    <string name="TSEmailF">Failed to send reset email, check the address and try again</string>
    <string name="Hello">Hello </string>
    <string name="feelingDepression">I am feeling depressed</string>
    <string name="feelingSocialIsolation">I am feeling socially isolated</string>
    <string name="experiencingAnxiety">I am experiencing anxiety</string>
    <string name="feelingSad">I suffer from post-traumatic stress disorder</string>
    <string name="selfConfidenceIssues">I am dealing with self-confidence issues</string>
    <string name="dealingWithDivorce">I am dealing with a divorce</string>
    <string name="needHelp">I suffer from the consequences of the seventh of October</string>
    <string name="familyIssues">I am dealing with family issues</string>
    <string name="newHere">Dont have an account yet? Register now</string>
    <string name="newHere2">Register now</string>
    <string name="welcome2">Welcome</string>
    <string name="somthingW">One of the details is incorrect</string>
    <string name="anonimusF">Anonymous login failed</string>
    <string name="phoneMin10">Phone fields must contain 10 digits</string>
    <string name="updatePS">Data saved successfully!</string>
    <string name="coppy">Copied to clipboard</string>
    <string name="Thelp">Helplines</string>
    <string name="hebrewNS">Hebrew TTS not supported</string>
    <string name="englishNS">English TTS not supported</string>
    <string name="userExist1">Already have an account? Sign in now</string>
    <string name="userExist2">Sign in now</string>
    <string name="terms1">I agree to the Terms</string>
    <string name="terms2">Terms</string>
    <string name="enterYourName">Please enter your name</string>
    <string name="enterEmail">Please enter your email</string>
    <string name="enterPassword">Please enter a 6 digit password</string>
    <string name="enterPhoneNumber">Please enter your personal phone number</string>
    <string name="enterAge">Select an age group</string>
    <string name="enterEmergencyPhone1">Please enter Emergency Phone 1</string>
    <string name="enterEmergencyPhone2">Please enter Emergency Phone 2</string>
    <string name="chooseG">Please select a gender</string>
    <string name="acceptT">Please confirm that you have read and agree to the terms</string>
    <string name="userAS">User created successfully</string>
    <string name="userAF">Error creating user</string>
    <string name="userE">Email already exists in the system</string>
    <string name="chooseAvt">Please select an avatar</string>
    <string name="successfullyAvt">Avatar saved successfully</string>
    <string name="failedAvt">Failed to save avatar</string>
    <string name="swich">He / En</string>
    <string name="he">He</string>
    <string name="en">En</string>
    <string name="updateH">Version Update</string>
    <string name="updateT">A version update is available to fix bugs</string>
    <string name="updateB">Update</string>
    <string name="forgetPasswordBtn">Forgot password?</string>
    <string name="typing">Typing </string>
    <string name="skip">skip </string>
    <string name="age">age</string>
    <string name="ageH">Select your age</string>
</resources>