<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1"
    android:layoutDirection="rtl"
    tools:context=".Login">

    <!-- מסגרת לתיבה ולכותרות, ליצירת הרקע המשותף -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.28"
        android:layout_marginBottom="25dp">

        <!-- תיבת תצוגה עם גראדיאנט מעוגל, שמשמש כרקע לטקסט -->
        <View
            android:id="@+id/avatarBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_background" />

        <!-- כותרת טקסט ראשית, מעל ה-View, מוצמדת לימין -->
        <TextView
            android:id="@+id/avatarT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginH"
            android:textColor="#8257E3"
            android:textSize="40dp"
            android:fontFamily="@font/assistantbold"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp"/>

        <!-- כותרת טקסט משנית, מוצמדת לימין, גם היא מעל ה-View -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginT"
            android:fontFamily="@font/assistantregular"
            android:textSize="18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="75dp"
            android:layout_marginRight="25dp"/>
    </FrameLayout>

    <!-- אינפוטים למייל ולסיסמא -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_input_background"
            android:fontFamily="@font/assistantregular"
            android:gravity="right"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:scrollbars="none"
            android:maxLines="1"
            android:textSize="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:gravity="center_vertical"
            app:hintEnabled="false"
            android:layout_gravity="center" >


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:background="@drawable/rounded_input_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/assistantregular"
            android:gravity="right"
            android:maxLines="1"
            android:textSize="18dp"
            android:padding="16dp"
            android:scrollbars="none"
            android:layout_gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPasswordBtn"
            android:textColor="#8257E3"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/assistantregular"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <!-- כפתור התחברות והטקסט בתחתית המסך -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:text="@string/login"
            android:textColor="#8257E3"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="@drawable/backgroundbtn2"
            android:fontFamily="@font/assistantregular"
            android:textSize="17dp"
            android:focusable="true"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/registerInLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerInLoginPage"
            android:textSize="16dp"
            android:fontFamily="@font/assistantregular"
            android:focusable="true"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>