<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">


    <ImageView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dialogEmergency"
        android:textSize="18dp"
        android:gravity="center"
        android:fontFamily="@font/assistantregular"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantregular"
            android:text="@string/no"
            android:textSize="14dp"
            android:focusable="true"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantregular"
            android:text="@string/yes"
            android:textSize="14dp"
            android:focusable="true"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</LinearLayout>