<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1"
    tools:context=".ForgetPassword">

    <!-- מסגרת לתיבה ולכותרות, ליצירת הרקע המשותף -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.28"
        android:layoutDirection="rtl"
        android:layout_marginBottom="25dp">

        <!-- תיבת תצוגה עם גראדיאנט מעוגל, שמשמש כרקע לטקסט -->
        <View
            android:id="@+id/avatarBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_background" />

        <!-- כותרת טקסט ראשית, מעל ה-View, מוצמדת לימין -->
        <TextView
            android:id="@+id/avatarT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPasswordH"
            android:textColor="#8257E3"
            android:textSize="40dp"
            android:fontFamily="@font/assistantbold"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"/>

        <!-- כותרת טקסט משנית, מוצמדת לימין, גם היא מעל ה-View -->
        <TextView
            android:id="@+id/selectAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPasswordT"
            android:fontFamily="@font/assistantregular"
            android:textSize="18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="25dp"
            android:layout_marginTop="75dp" />
    </FrameLayout>

    <!-- אינפוטים למייל ולסיסמא -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/inputEmailFP"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="18dp"
            android:gravity="right"
            android:fontFamily="@font/assistantregular"
            android:background="@drawable/rounded_input_background"
            android:layout_marginBottom="25dp"/>


    </LinearLayout>

    <!-- כפתור התחברות והטקסט בתחתית המסך -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/btnResetP"
            android:layout_width="360dp"
            android:layout_height="53dp"
            android:text="@string/next"
            android:textColor="#8257E3"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="@drawable/backgroundbtn2"
            android:fontFamily="@font/assistantregular"
            android:focusable="true"
            android:textSize="17dp" />

    </LinearLayout>

</LinearLayout>